<resources>
    <string name="app_name">Forest</string>
    <string name="title_serie">serie</string>
    <string name="title_category">category</string>
    <string name="title_search">search</string>
    <string name="title_favorite">favorite</string>
    <string name="title_setting">Settings</string>
    <string name="nav_title_serie">Serie</string>
    <string name="nav_title_category">Category</string>
    <string name="nav_title_search">Search</string>
    <string name="nav_title_favorite">Favorite</string>
    <string name="nav_title_settings">Settings</string>
    <string name="splashScreen_author">by Josselin MABILON</string>
    <string name="image_view_for_serie_list">ImageView for serie List</string>
    <string name="serie_name">serie name</string>
    <string name="serie_no_name">No Name</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="button_retry">Retry</string>
    <string name="launch_image_context_desc">Launch Image</string>
    <string name="no_results_found">No results found…</string>
    <string name="no_internet_connection_for_search">No internet connection. Please check if you have Internet and retry your query.</string>
    <string name="title_search_menu">Search</string>
    <string name="switch_dark_mode_text">Dark Mode</string>
    <string name="background_image" translatable="false">background_image</string>
    <string name="background_filter" translatable="false">background_filter</string>
    <string name="serie_image" translatable="false">Serie\'s image</string>
    <string name="name_of_the_serie" translatable="false">Name of the serie</string>
    <string name="summary" translatable="false">Summary</string>
    <string name="series_status_running">Running</string>
    <string name="serie_status_ended">Ended</string>
    <string name="serie_status_in_developement">In development</string>
    <string name="rating_text" translatable="false">rating</string>
</resources>