<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_serie"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_title_serie"/>
    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/nav_title_search"/>
    <item
        android:id="@+id/navigation_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/nav_title_favorite"/>
    <item
        android:id="@+id/navigation_setting"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_title_settings"/>
</menu>