<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_filter_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/fag_serie_margin_chip_group"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_status_running"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/series_status_running"
                    android:checkable="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_status_ended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serie_status_ended"
                    android:checkable="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_status_in_developement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serie_status_in_developement"
                    android:checkable="true" />

            </com.google.android.material.chip.ChipGroup>

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_serie_view" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/progress_bar"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/text_view_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_retry"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/serie_frag_text_view_no_internet"
                android:text="@string/no_internet_connection"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/button_retry"
                app:layout_constraintEnd_toEndOf="@+id/button_retry"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="@+id/button_retry"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92"
                tools:visibility="gone" />

            <Button
                android:id="@+id/button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_corner"
                android:text="@string/button_retry"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>