<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_search"
                android:textSize="@dimen/toolbar_title_size"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:showAsAction="ifRoom|collapseActionView"
                android:layoutDirection="rtl"
                android:visibility="visible"
                app:actionViewClass="android.widget.SearchView"/>

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_serie_view" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/progress_bar"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
                app:layout_constraintEnd_toEndOf="@+id/recycler_view"
                app:layout_constraintHorizontal_bias="0.475"
                app:layout_constraintStart_toStartOf="@+id/recycler_view"
                app:layout_constraintTop_toTopOf="@+id/recycler_view" />

            <TextView
                android:id="@+id/text_view_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_retry"
                android:padding="@dimen/serie_frag_text_view_no_internet"
                android:text="@string/no_internet_connection"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/button_retry"
                app:layout_constraintEnd_toEndOf="@+id/button_retry"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="@+id/button_retry"
                app:layout_constraintTop_toTopOf="@+id/recycler_view"
                app:layout_constraintVertical_bias="0.92" />

            <Button
                android:id="@+id/button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_corner"
                android:text="@string/button_retry"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
                app:layout_constraintEnd_toEndOf="@+id/recycler_view"
                app:layout_constraintStart_toStartOf="@+id/recycler_view"
                app:layout_constraintTop_toTopOf="@+id/recycler_view" />

            <TextView
                android:id="@+id/text_view_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_results_found"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
                app:layout_constraintEnd_toEndOf="@+id/recycler_view"
                app:layout_constraintStart_toStartOf="@+id/recycler_view"
                app:layout_constraintTop_toTopOf="@+id/recycler_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>